updated explore card now exploreCard have it own css file fixed notification pannel mobile not covering screen

--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -9,13 +9,6 @@
     border-radius: 16px;
 }
 
-.small {
-    max-width: 350px;
-}
-.tagSelected {
-    width: 350px;
-}
-
 .bg-img {
     display: block;
     max-width: 100%;
@@ -48,29 +41,4 @@
     padding-top: 5px;
     font-size: 14px;
     font-style: italic;
-}
-
-.explore-bg-tint {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    background-color: rgba(0, 0, 0, 0.25);
-    border-radius: 16px;
-    z-index: 1;
-}
-
-.explore-card-name {
-    font-size: 2rem;
-    color: aliceblue;
-}
-
-.explore-card-slogan {
-    color: aliceblue;
-    margin-top: 10px;
-    margin-bottom: 30px;
 }
