--- a/src/screens/css/Notification.css
+++ b/src/screens/css/Notification.css
@@ -1,4 +1,4 @@
-.notification-modle {
+.notification-model {
     position: absolute;
     top: 75px;
     right: 50px;
@@ -92,7 +92,7 @@
 }
 
 @media (max-width: 768px){
-    .notification-modle{
+    .notification-model{
         width: 100%;
         height: 100%;
         position: fixed;
